package model;

/**
 * @author : Ricardo Venâncio - 1210828
 **/
public enum Building {
    ANIMAL_STABLE,
    MACHINE_APPLIANCES_GARAGE,
    HARVEST_WAREHOUSE,
    PRODUCTIONS_FACTOR_ANIMAL_RATION,
    IRRIGATION_SYSTEM
}
