package model;

/**
 * @author : Ricardo Venâncio - 1210828
 **/
public record Element(String substance, int quantity) {
}
