package model;

/**
 * @author : Ricardo Venâncio - 1210828
 **/
public enum Formulation {
    LIQUID,
    GRAINY,
    DUST;
}
